--- a/SUNUSHOP/angular.json
+++ b/SUNUSHOP/angular.json
@@ -115,7 +115,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/bootstrap.min.css"
             ],
             "scripts": []
           }
